# ChangeLog for Gentoo Linux Installer
# Copyright 2005-2005 Gentoo Technologies, Inc.

# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.605 2006/02/28 16:12:30 agaffney Exp $

  28 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIClientController.py:
  accept 'none' as well as 'null' for network type
  src/GLIArchitectureTemplate.py:
  ignore extended partitions in mount_local_partitions()

  27 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  copy_pkg_to_chroot() uses compile_output.log for command output

  23 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  only keep a 1000 line 'scrollback' buffer for the compile output and log file

  20 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  add code make GLIPortage.py capable of being run stand-along for dynamic
  stage3 generation and copying packages in a GRP-ish way
  grp code fixups

  17 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  ignore blank packages passed to get_deps() and emerge()

  14 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIUtility.py:
  add get_chosts() function

*GLI-0.3 (12 Feb 2006)

  12 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  pull old start/end sector values from somewhere that actually has them
  add logic for extended partition to code that makes sure new end sector
  doesn't overlap start sector of next partitions
  don't freak out if partition can't be deleted

  11 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/GLIPortage.py:
  run env-update at the end of copy_pkg_to_chroot()

  10 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
  src/templates/x86ArchitectureTemplate.py:
  I'm a complete fscking dumbass. I recorded the end sector for partitions that
  weren't being touched, but I never used it when recreating them...the end was
  calculated from the size in MB instead :/

  9 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>