@@ -1,13 +1,17 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.605 2006/02/28 16:12:30 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.606 2006/02/28 19:47:47 agaffney Exp $
 
   28 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIClientController.py:
   accept 'none' as well as 'null' for network type
   src/GLIArchitectureTemplate.py:
   ignore extended partitions in mount_local_partitions()
+  src/templates/x86ArchitectureTemplate.py:
+  use get_ordered_partition_list() instead of keys().sort() for new_part_list
+  check to make sure start sector for primary isn't less than end sector for
+  previous extended
 
   27 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
